--- a/MySQL Python Apply Function.ipynb
+++ b/MySQL Python Apply Function.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "      <td>小綠</td>\n",
        "      <td>英語</td>\n",
        "      <td>90</td>\n",
-       "      <td>Good~</td>\n",
+       "      <td>Excellent</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -243,16 +243,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   student_id name major  score   mynote\n",
-       "0           1   小子    英語     20  Fail...\n",
-       "1           2   小光    英語     30  Fail...\n",
-       "2           3   小志    化學     40  Fail...\n",
-       "3           4   小綠    英語     90    Good~\n",
-       "4           5   小美    英語     60    Good~\n",
-       "5           6   小美    化學     60    Good~"
+       "   student_id name major  score     mynote\n",
+       "0           1   小子    英語     20    Fail...\n",
+       "1           2   小光    英語     30    Fail...\n",
+       "2           3   小志    化學     40    Fail...\n",
+       "3           4   小綠    英語     90  Excellent\n",
+       "4           5   小美    英語     60      Good~\n",
+       "5           6   小美    化學     60      Good~"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
     "    if score < 60:\n",
     "        return \"Fail...\"\n",
     "\n",
-    "    elif score >= 60 & score < 80:\n",
+    "    elif (score >= 60) & (score < 80):\n",
     "        return \"Good~\"\n",
     "    \n",
     "    elif score > 80:\n",
